# opencpo-tester

./: .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  config.yaml.example  main.py  profile_generator.py  pyproject.toml  requirements.txt  run-compliance-test.sh  runner.py  server.py
docs/: configuration.md  reports.md  test-reference.md  writing-tests.md
examples/: config.example.yaml
examples/branding/: README.md
examples/branding/example/: config.yaml
examples/branding/stroomlijnen/: config.yaml
ocpp_messages/: __init__.py  v16.py  v201.py
report/: __init__.py  generator.py  html.py  pdf.py
tests/: __init__.py  base.py
tests/v16/: __init__.py  auth.py  boot.py  firmware.py  meter_values.py  protocol.py  remote_control.py  smart_charging.py  status.py  transactions.py
tests/v201/: __init__.py  boot.py  firmware.py  meter_values.py  protocol.py  remote_control.py  security.py  smart_charging.py  status.py  transactions.py  variables.py
