[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ocpp-compliance-tester"
version = "1.0.0"
description = "Automated OCPP 1.6/2.0.1 compliance testing for EV chargers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["ocpp", "ev", "charger", "compliance", "testing", "evse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]

dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
ocpp-tester = "main:main"

[project.urls]
Homepage = "https://github.com/opencpo/opencpo-tester"
"Bug Tracker" = "https://github.com/opencpo/opencpo-tester/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocpp_messages*", "report*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
